--- a/src/app/edicion/addestudio/addestudio.component.html
+++ b/src/app/edicion/addestudio/addestudio.component.html
@@ -4,50 +4,49 @@
       <h4><i class="bi bi-chat-left-quote"></i>Estudio</h4>
     </div>
     <div class="mb-1">
+      <!-------------------------------FORMULARIO PARA AGREGAR UN ESTUDIO--------------------------------->
       <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
-        <div>
+        <!-------------------------------INPUT PARA EL TITULO--------------------------------->
+        <div class="mb-4">
           <label for="email">Titulo </label>
-          <input type="titulo" formControlName="titulo" />
+          <input type="titulo" class="form-control" formControlName="titulo" />
         </div>
         <div *ngIf="Titulo?.errors && Titulo?.touched">
           <p *ngIf="Titulo?.hasError('required')" class="error">
-            El titulo es requerido.
+            <strong>El titulo es requerido. </strong>
           </p>
         </div>
-        <br />
-        <div>
-          <label for="exampleInputPassword1" class="form-label"
-            >Institucion
-          </label>
-          <input
-            type="institucion"
-            formControlName="institucion"
-          />
+        <!-------------------------------INPUT PARA LA INSTITUCION CORRESPONDIENTE--------------------------------->
+        <div class="mb-4">
+          <label for="exampleInputPassword1" class="form-label">Institucion</label>
+          <input type="institucion" class="form-control" formControlName="institucion"/>
         </div>
         <div *ngIf="Institucion?.errors && Institucion?.touched">
           <p *ngIf="Institucion?.hasError('required')" class="error">
-            La institucion es requerida.
+            <strong>La institucion es requerida.</strong>
           </p>
         </div>
-        <div>
+        <!-------------------------------INPUT PARA LA FECHA DESDE--------------------------------->
+        <div class="mb-4">
           <label for="email">Desde </label>
-          <input type="date" formControlName="desde" />
+          <input type="date" class="form-control" formControlName="desde" />
         </div>
         <div *ngIf="Desde?.errors && Desde?.touched">
           <p *ngIf="Desde?.hasError('required')" class="error">
-            La fecha es requerida.
+            <strong>La fecha es requerida.</strong>
           </p>
         </div>
+        <!-------------------------------INPUT PARA LA FECHA HASTA--------------------------------->
         <div>
           <label for="email">Hasta </label>
-          <input type="date" formControlName="hasta" />
+          <input type="date" class="form-control" formControlName="hasta" />
         </div>
         <div *ngIf="Hasta?.errors && Hasta?.touched">
           <p *ngIf="Hasta?.hasError('required')" class="error">
-            La fecha es requerida.
+            <strong>La fecha es requerida.</strong>
           </p>
         </div>
-        <br />
+        <!-------------------------------BOTON DE ENVIAR--------------------------------->
         <div>
           <button type="submit button" class="btn btn-primary">Guardar</button>
         </div>
