--- a/src/app/edicion/editacercade/editacercade.component.html
+++ b/src/app/edicion/editacercade/editacercade.component.html
@@ -1,29 +1,44 @@
 <section class="d-flex justify-content-center align-items-center contenido">
   <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
     <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Datos</h4>
+      <h4><i class="bi bi-chat-left-quote"></i>Acerca de</h4>
     </div>
     <div class="mb-1">
-      <form id="contacto">
+      <!-------------------------------FORMULARIO PARA CREAR UNA NUEVA PERSONA--------------------------------->
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+        <!-------------------------------INPUT PARA EL NOMBRE--------------------------------->
         <div class="mb-4">
-          <label for="nombre"><i class="bi bi-envelope-fill"></i> Nombre</label>
-          <input type="text" class="form-control" id="nombre" required />
-          <div class="text-danger"></div>
+          <label for="titulo"> <i class="bi bi-envelope-fill"></i> Nombre </label>
+          <input type="nombreCompleto" class="form-control" formControlName="nombreCompleto" />
         </div>
+        <div *ngIf="NombreCompleto?.errors && NombreCompleto?.touched">
+          <p *ngIf="NombreCompleto?.hasError('required')" class="error">
+            <strong>El nombre de la persona es requerido.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA INFORMACION--------------------------------->
         <div class="mb-4">
-          <label for="informacion"
-            ><i class="bi bi-envelope-fill"></i> Indormacion Personal</label
-          >
-          <input type="text" class="form-control" id="informacion" required />
-          <div class="text-danger"></div>
+          <label for="porcentaje"> <i class="bi bi-envelope-fill"></i> Informacion personal </label>
+          <input type="informacion" class="form-control" formControlName="informacion"/>
         </div>
-        <div class="mb-2">
-          <button
-            id="botton"
-            class="col-12 btn btn-primary d-flex justify-content-between"
-          >
-            <span>Guardar </span><i id="guardar" class="bi bi-cursor-fill"></i>
-          </button>
+        <div *ngIf="Informacion?.errors && Informacion?.touched">
+          <p *ngIf="Informacion?.hasError('required')" class="error">
+            <strong>La informacion personal es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA URL DE LA FOTO--------------------------------->
+        <div class="mb-4">
+          <label for="porcentaje"> <i class="bi bi-envelope-fill"></i> Url Foto de perfil </label>
+          <input type="urlFoto" class="form-control" formControlName="urlFoto"/>
+        </div>
+        <div *ngIf="UrlFoto?.errors && UrlFoto?.touched">
+          <p *ngIf="UrlFoto?.hasError('required')" class="error">
+            <strong>La url de la Foto es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------BOTON DE SUBMIT--------------------------------->
+        <div>
+          <button type="submit" class="btn btn-primary">Guardar</button>
         </div>
         <a routerLink="/">volver</a>
       </form>
