--- a/src/app/edicion/editestudio/editestudio.component.html
+++ b/src/app/edicion/editestudio/editestudio.component.html
@@ -1,47 +1,54 @@
 <section class="d-flex justify-content-center align-items-center contenido">
   <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
     <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Estudios</h4>
+      <h4><i class="bi bi-chat-left-quote"></i>Estudio</h4>
     </div>
     <div class="mb-1">
-      <form id="contacto">
+      <!-------------------------------FORMULARIO PARA AGREGAR UN ESTUDIO--------------------------------->
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+        <!-------------------------------INPUT PARA EL TITULO--------------------------------->
         <div class="mb-4">
-          <label for="nombre"
-            ><i class="bi bi-envelope-fill"></i> Tipo estudio</label
-          >
-          <input
-            type="text"
-            class="form-control"
-            id="nombre"
-            placeholder="primario,secuandio,universitario"
-            required
-          />
-          <div class="text-danger"></div>
+          <label for="email">Titulo </label>
+          <input type="titulo" class="form-control" formControlName="titulo" />
         </div>
+        <div *ngIf="Titulo?.errors && Titulo?.touched">
+          <p *ngIf="Titulo?.hasError('required')" class="error">
+            <strong>El titulo es requerido. </strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA INSTITUCION CORRESPONDIENTE--------------------------------->
         <div class="mb-4">
-          <label for="informacion"
-            ><i class="bi bi-envelope-fill"></i> Institucion</label
-          >
-          <input type="text" class="form-control" id="informacion" required />
-          <div class="text-danger"></div>
+          <label for="exampleInputPassword1" class="form-label">Institucion</label>
+          <input type="institucion" class="form-control" formControlName="institucion"/>
         </div>
+        <div *ngIf="Institucion?.errors && Institucion?.touched">
+          <p *ngIf="Institucion?.hasError('required')" class="error">
+            <strong>La institucion es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA FECHA DESDE--------------------------------->
         <div class="mb-4">
-          <label for="nombre"><i class="bi bi-envelope-fill"></i> Desde</label>
-          <input type="date" class="form-control" id="nombre" required />
-          <div class="text-danger"></div>
+          <label for="email">Desde </label>
+          <input type="date" class="form-control" formControlName="desde" />
         </div>
-        <div class="mb-4">
-          <label for="nombre"><i class="bi bi-envelope-fill"></i> Hasta</label>
-          <input type="date" class="form-control" id="nombre" required />
-          <div class="text-danger"></div>
+        <div *ngIf="Desde?.errors && Desde?.touched">
+          <p *ngIf="Desde?.hasError('required')" class="error">
+            <strong>La fecha es requerida.</strong>
+          </p>
         </div>
-        <div class="mb-2">
-          <button
-            id="botton"
-            class="col-12 btn btn-primary d-flex justify-content-between"
-          >
-            <span>Guardar </span><i id="guardar" class="bi bi-cursor-fill"></i>
-          </button>
+        <!-------------------------------INPUT PARA LA FECHA HASTA--------------------------------->
+        <div>
+          <label for="email">Hasta </label>
+          <input type="date" class="form-control" formControlName="hasta" />
+        </div>
+        <div *ngIf="Hasta?.errors && Hasta?.touched">
+          <p *ngIf="Hasta?.hasError('required')" class="error">
+            <strong>La fecha es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------BOTON DE ENVIAR--------------------------------->
+        <div>
+          <button type="submit button" class="btn btn-primary">Guardar</button>
         </div>
         <a routerLink="/">volver</a>
       </form>
