--- a/src/app/edicion/editproyecto/editproyecto.component.html
+++ b/src/app/edicion/editproyecto/editproyecto.component.html
@@ -4,33 +4,31 @@
       <h4><i class="bi bi-chat-left-quote"></i>Proyecto</h4>
     </div>
     <div class="mb-1">
-      <form id="contacto">
+      <!-------------------------------FORMULARIO PARA AGREGAR UN PROYECTO--------------------------------->
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+        <!-------------------------------INPUT PARA EL TITULO--------------------------------->
         <div class="mb-4">
-          <label for="formFile" class="form-label">Imagen del proyecto</label>
-          <input class="form-control" type="file" id="formFile" />
-          <div class="text-danger"></div>
+          <label for="email"> Titulo </label>
+          <input type="titulo" class="form-control" formControlName="titulo" />
         </div>
+        <div *ngIf="Titulo?.errors && Titulo?.touched">
+          <p *ngIf="Titulo?.hasError('required')" class="error">
+            <strong>El titulo es requerido.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA INFORMACION--------------------------------->
         <div class="mb-4">
-          <label for="informacion"
-            ><i class="bi bi-envelope-fill"></i> Nombre del proyecto</label
-          >
-          <input type="text" class="form-control" id="informacion" required />
-          <div class="text-danger"></div>
+          <label for="exampleInputPassword1" class="form-label"> Informacion </label>
+          <input type="infromacion" class="form-control" formControlName="informacion" />
         </div>
-        <div class="mb-4">
-          <label for="nombre"
-            ><i class="bi bi-envelope-fill"></i>Descripcion</label
-          >
-          <input type="text" class="form-control" id="nombre" required />
-          <div class="text-danger"></div>
+        <div *ngIf="Informacion?.errors && Informacion?.touched">
+          <p *ngIf="Informacion?.hasError('required')" class="error">
+            <strong>La informacion es requerida.</strong>
+          </p>
         </div>
-        <div class="mb-2">
-          <button
-            id="botton"
-            class="col-12 btn btn-primary d-flex justify-content-between"
-          >
-            <span>Guardar </span><i id="guardar" class="bi bi-cursor-fill"></i>
-          </button>
+        <!-------------------------------BOTON PARA ENVIAR--------------------------------->
+        <div>
+          <button type="submit" class="btn btn-primary">Guardar</button>
         </div>
         <a routerLink="/">volver</a>
       </form>
