--- a/src/app/edicion/addestudio/addestudio.component.html
+++ b/src/app/edicion/addestudio/addestudio.component.html
@@ -50,6 +50,10 @@
         <div>
           <button type="submit button" class="btn btn-primary">Guardar</button>
         </div>
+        <br>
+        <div>
+          <button type="button" class="btn btn-primary" (click)="limpiar()">Limpiar</button>
+        </div>
         <a routerLink="/">volver</a>
       </form>
     </div>
