--- a/src/app/edicion/addskill/addskill.component.html
+++ b/src/app/edicion/addskill/addskill.component.html
@@ -30,6 +30,10 @@
         <div>
           <button type="submit" class="btn btn-primary">Guardar</button>
         </div>
+        <br>
+        <div>
+          <button type="button" class="btn btn-primary" (click)="limpiar()">Limpiar</button>
+        </div>
         <a routerLink="/">volver</a>
       </form>
     </div>
