se agregan los botones de liminar

--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -41,7 +41,11 @@
             {{dato.informacion}}
           </p>
         </div>
+        <button type="button" class="btn btn-primary">
+          <i class="fa-solid fa-trash" (click)="delete(dato.id)"></i>
+        </button>
       </div>
     </div>
+    </li>
   </div>
 </section>
