--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -23,7 +23,7 @@
               <i class="fa-solid fa-pen"></i>
             </button>
             <button type="button" class="btn btn-primary">
-              <i class="fa-solid fa-trash"></i>
+              <i class="fa-solid fa-trash" (click)="delete(educacion.id)"></i>
             </button>
           </div>
         </div>
