--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -28,7 +28,7 @@
               <i class="fa-solid fa-pen"></i>
             </button>
             <button type="button" class="btn btn-primary">
-              <i class="fa-solid fa-trash"></i>
+              <i class="fa-solid fa-trash" (click)="delete(experiencia.id)"></i>
             </button>
           </div>
         </div>
