--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -7,19 +7,19 @@
       </button>
     </div>
 
-    <li *ngFor="let proyectos of proyectos" class="lista">
+    <li *ngFor="let proyecto of proyectos" class="lista">
       <div class="card" aria-hidden="true">
         <div class="card-body">
-          <h5>{{ proyectos.titulo }}</h5>
-          <p>{{ proyectos.informacion }}</p>
-          <p>Inicio: {{ proyectos.desde }}</p>
-          <p>Fin: {{ proyectos.hasta }}</p>
+          <h5>{{ proyecto.titulo }}</h5>
+          <p>{{ proyecto.informacion }}</p>
+          <p>Inicio: {{ proyecto.desde }}</p>
+          <p>Fin: {{ proyecto.hasta }}</p>
           <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-primary" routerLink="/Editar-estudio">
               <i class="fa-solid fa-pen"></i>
             </button>
             <button type="button" class="btn btn-primary">
-              <i class="fa-solid fa-trash"></i>
+              <i class="fa-solid fa-trash" (click)="delete(proyecto.id)" ></i>
             </button>
           </div>
         </div>
