--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -28,10 +28,10 @@
       </div>
       <div class="btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-primary" routerLink="/Editar-habilidad" >
-          <i class="fa-solid fa-pen" (click)="delete(habilidad.id)"></i>
+          <i class="fa-solid fa-pen"></i>
         </button>
         <button type="button" class="btn btn-primary">
-          <i class="fa-solid fa-trash"></i>
+          <i class="fa-solid fa-trash" (click)="delete(habilidad.id)"></i>
         </button>
       </div>
     </li>
