--- a/src/app/componentes/nav-bar/nav-bar.component.html
+++ b/src/app/componentes/nav-bar/nav-bar.component.html
@@ -10,13 +10,13 @@
     </div>
     <div id="redes" class="social">
       <ul class="color-black">
-        <a href="#" style="color: white"
+        <a href="https://www.linkedin.com/in/luciano-paulucci-6a03a1241/" style="color: white"
           ><i class="fa-brands fa-linkedin fa-3x"></i
         ></a>
-        <a href="#" style="color: white"
-          ><i class="fa-brands fa-twitter-square fa-3x"></i
+        <a href="https://www.instagram.com/palucho.dev/" style="color: white"
+          ><i class="fa-brands fa-instagram fa-3x"></i
         ></a>
-        <a href="#" style="color: white"
+        <a href="https://github.com/Luchopaulucci" style="color: white"
           ><i class="fa-brands fa-github-square fa-3x"></i
         ></a>
       </ul>
