--- a/src/app/edicion/addproyecto/addproyecto.component.html
+++ b/src/app/edicion/addproyecto/addproyecto.component.html
@@ -1,7 +1,7 @@
 <section class="d-flex justify-content-center align-items-center contenido">
   <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
     <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Proyecto</h4>
+      <h4><i class="bi bi-chat-left-quote"></i>Agregar un proyecto</h4>
     </div>
     <div class="mb-1">
       <!-------------------------------FORMULARIO PARA AGREGAR UN PROYECTO--------------------------------->
@@ -46,9 +46,19 @@
             <strong>La fecha es requerida.</strong>
           </p>
         </div>
+        <!-------------------------------INPUT PARA LA URL DEL PROYECTO--------------------------------->
+        <div class="mb-4">
+          <label for="urlProyecto"> URL Proyecto </label>
+          <input type="text" class="form-control" formControlName="urlProyecto" />
+        </div>
+        <div *ngIf="UrlProyecto?.errors && UrlProyecto?.touched">
+          <p *ngIf="UrlProyecto?.hasError('required')" class="error">
+            <strong>La URL es requerida.</strong>
+          </p>
+        </div>
         <!-------------------------------BOTON PARA ENVIAR--------------------------------->
         <div>
-          <button type="submit" class="btn btn-primary">Guardar</button>
+          <button type="submit" class="btn btn-primary">Crear</button>
         </div>
         <br>
         <div>
