--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -5,20 +5,13 @@
         <div class="titulo">
           <h3 class="dark-color text-center">Acerca de mi</h3>
         </div>
-        <div class="agregar-eliminar">
+        <div *ngIf="modoEdit" class="agregar-eliminar">
           <button
             type="button"
             class="btn btn-primary"
             routerLink="/Add-acercade"
           >
             <i class="fa-solid fa-plus"></i>
-          </button>
-          <button
-            type="button"
-            class="btn btn-primary"
-            routerLink="/Editar-acercade"
-          >
-            <i class="fa-solid fa-pen"></i>
           </button>
         </div>
       </div>
@@ -41,9 +34,14 @@
             {{dato.informacion}}
           </p>
         </div>
-        <button type="button" class="btn btn-primary">
-          <i class="fa-solid fa-trash" (click)="delete(dato.id)"></i>
-        </button>
+        <div *ngIf="modoEdit" class="btn-group" role="group">
+          <button type="button" class="btn btn-primary" routerLink="/Editar-acercade/{{dato.id}}">
+            <i class="fa-solid fa-pen"></i>
+          </button>
+          <button type="button" class="btn btn-primary">
+            <i class="fa-solid fa-trash" (click)="delete(dato.id)"></i>
+          </button>
+        </div>
       </div>
     </div>
     </li>
