--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,7 +1,7 @@
 <section id="experiencia" class="section">
   <div class="row">
     <h2 class="text-center titulo">Experiencias</h2>
-    <div class="agregar-eliminar">
+    <div *ngIf="modoEdit" class="agregar-eliminar">
       <button
         type="button"
         class="btn btn-primary"
@@ -14,17 +14,11 @@
       <div class="card" aria-hidden="true">
         <div class="card-body">
           <h5>{{ experiencia.titulo }}</h5>
-          <p>
-            {{ experiencia.area }}
-          </p>
+          <p>{{ experiencia.area }}</p>
           <p>Inicio: {{ experiencia.desde }}</p>
           <p>Fin: {{ experiencia.hasta }}</p>
-          <div class="btn-group" role="group" aria-label="Basic example">
-            <button
-              type="button"
-              class="btn btn-primary"
-              routerLink="/Editar-experiencia"
-            >
+          <div *ngIf="modoEdit" class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-primary" routerLink="/Editar-experiencia/{{experiencia.id}}">
               <i class="fa-solid fa-pen"></i>
             </button>
             <button type="button" class="btn btn-primary">
