--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -3,13 +3,13 @@
   <div class="d-flex justify-content-center">
     <div class="social">
       <ul class="color-black">
-        <a href="#" style="color: black"
+        <a href="https://www.linkedin.com/in/luciano-paulucci-6a03a1241/" style="color: black"
           ><i class="fa-brands fa-linkedin fa-3x"></i
         ></a>
-        <a href="#" style="color: black"
-          ><i class="fa-brands fa-twitter-square fa-3x"></i
+        <a href="https://www.instagram.com/palucho.dev/" style="color: black"
+          ><i class="fa-brands fa-instagram fa-3x"></i
         ></a>
-        <a href="#" style="color: black"
+        <a href="https://github.com/Luchopaulucci" style="color: black"
           ><i class="fa-brands fa-github-square fa-3x"></i
         ></a>
       </ul>
