--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,10 +1,17 @@
-<form class="login" (ngSubmit)="onEnviar($event)">
+<form class="login" [formGroup]="form" (ngSubmit)="onEnviar($event)">
   <div>
-    <h3 class="texto">INICIO DE SESION</h3>
+    <h3 class="texto"> |- INICIO DE SESION -|</h3>
+    <!---------------------INPUT PARA EL EMAIL--------------------------->
     <div>
       <label for="email" class="texto">Email: </label>
       <br />
-      <input type="email" formControlName="email" />
+      <input
+        type="text"
+        pattern="[^ @]*@[^ @]*"
+        formControlName="email"
+        class="form-control"
+        placeholder="aca va el email"
+      />
     </div>
     <div *ngIf="Mail?.errors && Mail?.touched">
       <p *ngIf="Mail?.hasError('required')" class="error">
@@ -15,26 +22,29 @@
       </p>
     </div>
     <br />
+    <!---------------------INPUT PARA LA CONTRASEÑA--------------------------->
     <div>
-      <label for="exampleInputPassword1" class="texto">Password: </label>
+      <label for="clave" class="texto">Password: </label>
       <br />
       <input
         type="password"
-        formControlName="password"
-        [class.border-danger]="MailValid"
+        formControlName="clave"
+        class="form-control"
+        placeholder="aca va la contraseña"
       />
     </div>
-    <div *ngIf="Password?.errors && Password?.touched">
-      <p *ngIf="Password?.hasError('required')" class="error">
+    <div *ngIf="Clave?.errors && Clave?.touched">
+      <p *ngIf="Clave?.hasError('required')" class="error">
         El password es requerido.
       </p>
-      <p *ngIf="Password?.errors?.['minLength']" class="error texto">
+      <p *ngIf="Clave?.errors?.['minLength']" class="error texto">
         El password debe ser de 8 o más caracteres.
       </p>
     </div>
-    <br />
+    <!---------------------BOTON PAR ENVIAR EL FORMULARIO--------------------------->
+    <br>
     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-    <br />
+    <br>
     <a routerLink="/" class="texto" type="submit">Volver</a>
   </div>
 </form>
