--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -3,13 +3,14 @@
     <div class="col-lg-12 text-center">
       <h2 class="titulo h3 text-center mb-8">Habilidades</h2>
     </div>
-    <div class="agregar-eliminar">
+    <div *ngIf="modoEdit" class="agregar-eliminar">
       <button type="button" class="btn btn-primary" routerLink="Add-habilidad">
         <i class="fa-solid fa-plus"></i>
       </button>
     </div>
+    <!--------------- LISTAMOS TODAS LAS HABILIDADES----------->
     <li *ngFor="let habilidad of habilidades" class="lista">
-      <div class="row mb-12">
+      <div class="row mb-12 graficos">
         <div class="col-12 align-items-center">
           <p class="h5">{{ habilidad.titulo }}</p>
           <div class="progress mb-5 rounded-5" style="height: 15px">
@@ -21,13 +22,14 @@
               aria-valuemin="0"
               aria-valuemax="100"
               [style.width.%]="habilidad.porcentaje"
-              style="min-width: 10%;"
-            >{{habilidad.porcentaje}}</div>
+              style="min-width: 10%;">
+              {{habilidad.porcentaje}}
+            </div>
           </div>
         </div>
       </div>
-      <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-primary" routerLink="/Editar-habilidad" >
+      <div *ngIf="modoEdit" class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-primary" routerLink="/Editar-habilidad/{{habilidad.id}}" >
           <i class="fa-solid fa-pen"></i>
         </button>
         <button type="button" class="btn btn-primary">
