--- a/src/app/edicion/addestudio/addestudio.component.html
+++ b/src/app/edicion/addestudio/addestudio.component.html
@@ -1,7 +1,7 @@
 <section class="d-flex justify-content-center align-items-center contenido">
   <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
     <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Estudio</h4>
+      <h4><i class="bi bi-chat-left-quote"></i>Agregar un estudio</h4>
     </div>
     <div class="mb-1">
       <!-------------------------------FORMULARIO PARA AGREGAR UN ESTUDIO--------------------------------->
@@ -48,7 +48,7 @@
         </div>
         <!-------------------------------BOTON DE ENVIAR--------------------------------->
         <div>
-          <button type="submit button" class="btn btn-primary">Guardar</button>
+          <button type="submit button" class="btn btn-primary">Crear</button>
         </div>
         <br>
         <div>
