--- a/src/app/edicion/editacercade/editacercade.component.html
+++ b/src/app/edicion/editacercade/editacercade.component.html
@@ -1,15 +1,15 @@
 <section class="d-flex justify-content-center align-items-center contenido">
   <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
     <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Acerca de</h4>
+      <h4><i class="bi bi-chat-left-quote"></i>Editar acerca de</h4>
     </div>
     <div class="mb-1">
       <!-------------------------------FORMULARIO PARA CREAR UNA NUEVA PERSONA--------------------------------->
-      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+      <form [formGroup]="form" (ngSubmit)="onUpdate()">
         <!-------------------------------INPUT PARA EL NOMBRE--------------------------------->
         <div class="mb-4">
-          <label for="titulo"> <i class="bi bi-envelope-fill"></i> Nombre </label>
-          <input type="nombreCompleto" class="form-control" formControlName="nombreCompleto" />
+          <label for="nombreCompleto"> <i class="bi bi-envelope-fill"></i> Nombre </label>
+          <input type="text" class="form-control" formControlName="nombreCompleto" id="nombreCompleto" name="nombreCompleto" [(ngModel)]="persona.nombreCompleto" required/>
         </div>
         <div *ngIf="NombreCompleto?.errors && NombreCompleto?.touched">
           <p *ngIf="NombreCompleto?.hasError('required')" class="error">
@@ -18,8 +18,8 @@
         </div>
         <!-------------------------------INPUT PARA LA INFORMACION--------------------------------->
         <div class="mb-4">
-          <label for="porcentaje"> <i class="bi bi-envelope-fill"></i> Informacion personal </label>
-          <input type="informacion" class="form-control" formControlName="informacion"/>
+          <label for="informacion"> <i class="bi bi-envelope-fill"></i> Informacion personal </label>
+          <input type="text" class="form-control" formControlName="informacion" id="informacion" name="informacion" [(ngModel)]="persona.informacion" required/>
         </div>
         <div *ngIf="Informacion?.errors && Informacion?.touched">
           <p *ngIf="Informacion?.hasError('required')" class="error">
@@ -28,8 +28,8 @@
         </div>
         <!-------------------------------INPUT PARA LA URL DE LA FOTO--------------------------------->
         <div class="mb-4">
-          <label for="porcentaje"> <i class="bi bi-envelope-fill"></i> Url Foto de perfil </label>
-          <input type="urlFoto" class="form-control" formControlName="urlFoto"/>
+          <label for="urlFoto"> <i class="bi bi-envelope-fill"></i> Url Foto de perfil </label>
+          <input type="text" class="form-control" formControlName="urlFoto" id="urlFoto" name="urlFoto" [(ngModel)]="persona.urlFoto" required/>
         </div>
         <div *ngIf="UrlFoto?.errors && UrlFoto?.touched">
           <p *ngIf="UrlFoto?.hasError('required')" class="error">
@@ -45,3 +45,4 @@
     </div>
   </div>
 </section>
+
