--- a/src/app/edicion/editexperiencia/editexperiencia.component.html
+++ b/src/app/edicion/editexperiencia/editexperiencia.component.html
@@ -1,15 +1,15 @@
 <section class="d-flex justify-content-center align-items-center contenido">
   <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
     <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Experiencia</h4>
+      <h4><i class="bi bi-chat-left-quote"></i>Editar la experiencia</h4>
     </div>
     <div class="mb-1">
       <!-------------------------------FORMULARIO PARA AGREGAR UNA EXPERIENCIA--------------------------------->
-      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+      <form [formGroup]="form" (ngSubmit)="onUpdate()">
         <!-------------------------------INPUT PARA EL TITULO--------------------------------->
         <div class="mb-4">
-          <label for="email"> Titulo </label>
-          <input type="titulo" class="form-control" formControlName="titulo" />
+          <label for="titulo"> Titulo </label>
+          <input type="text" class="form-control" formControlName="titulo" id="titulo" name="titulo" [(ngModel)]="experiencia.titulo" required/>
         </div>
         <div *ngIf="Titulo?.errors && Titulo?.touched">
           <p *ngIf="Titulo?.hasError('required')" class="error">
@@ -18,17 +18,37 @@
         </div>
         <!-------------------------------INPUT PARA EL AREA--------------------------------->
         <div class="mb-4">
-          <label for="exampleInputPassword1" class="form-label"> Area </label>
-          <input type="area" class="form-control" formControlName="area" />
+          <label for="area"> Area </label>
+          <input type="text" class="form-control" formControlName="area" placeholder="minimo de 6 caracteres" id="area" name="area" [(ngModel)]="experiencia.area" required/>
         </div>
         <div *ngIf="Area?.errors && Area?.touched">
           <p *ngIf="Area?.hasError('required')" class="error">
             <strong>El area es requerida.</strong>
           </p>
         </div>
+        <!-------------------------------INPUT PARA LA FECHA DESDE--------------------------------->
+        <div class="mb-4">
+          <label for="desde"> Desde </label>
+          <input type="date" class="form-control" formControlName="desde" id="desde" name="desde" [(ngModel)]="experiencia.desde" required/>
+        </div>
+        <div *ngIf="Desde?.errors && Desde?.touched">
+          <p *ngIf="Desde?.hasError('required')" class="error">
+            <strong>La fecha es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA FECHA HASTA--------------------------------->
+        <div class="mb-4">
+          <label for="hasta"> Hasta </label>
+          <input type="date" class="form-control" formControlName="hasta" id="hasta" name="hasta" [(ngModel)]="experiencia.hasta" required/>
+        </div>
+        <div *ngIf="Hasta?.errors && Hasta?.touched">
+          <p *ngIf="Hasta?.hasError('required')" class="error">
+            <strong>La fecha es requerida.</strong>
+          </p>
+        </div>
         <!-------------------------------BOTON PARA ENVIAR--------------------------------->
         <div>
-          <button type="submit button" class="btn btn-primary">Guardar</button>
+          <button type="submit" class="btn btn-primary">Guardar</button>
         </div>
         <a routerLink="/">volver</a>
       </form>
