--- a/src/app/edicion/editproyecto/editproyecto.component.html
+++ b/src/app/edicion/editproyecto/editproyecto.component.html
@@ -1,15 +1,15 @@
 <section class="d-flex justify-content-center align-items-center contenido">
   <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 p-4">
     <div class="mb-4 d-flex justify-content-start align-items-center">
-      <h4><i class="bi bi-chat-left-quote"></i>Proyecto</h4>
+      <h4><i class="bi bi-chat-left-quote"></i>Editar el proyecto</h4>
     </div>
     <div class="mb-1">
       <!-------------------------------FORMULARIO PARA AGREGAR UN PROYECTO--------------------------------->
-      <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+      <form [formGroup]="form" (ngSubmit)="onUpdate()">
         <!-------------------------------INPUT PARA EL TITULO--------------------------------->
         <div class="mb-4">
-          <label for="email"> Titulo </label>
-          <input type="titulo" class="form-control" formControlName="titulo" />
+          <label for="titulo"> Titulo </label>
+          <input type="text" class="form-control" formControlName="titulo" id="titulo" name="titulo" [(ngModel)]="proyecto.titulo" required/>
         </div>
         <div *ngIf="Titulo?.errors && Titulo?.touched">
           <p *ngIf="Titulo?.hasError('required')" class="error">
@@ -18,12 +18,42 @@
         </div>
         <!-------------------------------INPUT PARA LA INFORMACION--------------------------------->
         <div class="mb-4">
-          <label for="exampleInputPassword1" class="form-label"> Informacion </label>
-          <input type="infromacion" class="form-control" formControlName="informacion" />
+          <label for="Informacion" class="form-label"> Informacion </label>
+          <input type="text" class="form-control" formControlName="informacion" id="infomacion" name="informacion" [(ngModel)]="proyecto.informacion" required/>
         </div>
         <div *ngIf="Informacion?.errors && Informacion?.touched">
           <p *ngIf="Informacion?.hasError('required')" class="error">
             <strong>La informacion es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA FECHA DESDE--------------------------------->
+        <div class="mb-4">
+          <label for="email"> Desde </label>
+          <input type="date" class="form-control" formControlName="desde" id="desde" name="hasta" [(ngModel)]="proyecto.desde" required />
+        </div>
+        <div *ngIf="Desde?.errors && Desde?.touched">
+          <p *ngIf="Desde?.hasError('required')" class="error">
+            <strong>La fecha es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA FECHA HASTA--------------------------------->
+        <div class="mb-4">
+          <label for="hasta"> Hasta </label>
+          <input type="date" class="form-control" formControlName="hasta" id="hasta" name="hasta" [(ngModel)]="proyecto.hasta" required/>
+        </div>
+        <div *ngIf="Hasta?.errors && Hasta?.touched">
+          <p *ngIf="Hasta?.hasError('required')" class="error">
+            <strong>La fecha es requerida.</strong>
+          </p>
+        </div>
+        <!-------------------------------INPUT PARA LA URL DEL PROYECTO--------------------------------->
+        <div class="mb-4">
+          <label for="urlProyecto"> URL del proyecto </label>
+          <input type="text" class="form-control" formControlName="urlProyecto" id="urlProyecto" name="urlProyecto" [(ngModel)]="proyecto.urlProyecto" required/>
+        </div>
+        <div *ngIf="Hasta?.errors && Hasta?.touched">
+          <p *ngIf="Hasta?.hasError('required')" class="error">
+            <strong>La fecha es requerida.</strong>
           </p>
         </div>
         <!-------------------------------BOTON PARA ENVIAR--------------------------------->
