--- a/src/app/componentes/logout/logout.component.html
+++ b/src/app/componentes/logout/logout.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary" type="button">Cerrar Sesión</button>
+<button class="btn btn-danger" type="button" (click)="cerrarSesion()">Cerrar Sesión</button>
