--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -2,11 +2,8 @@
   <div class="container align-self-center">
     <div class="row">
       <div class="col-lg-10 col-xl-9 mx-auto text-center text-white">
-        <h1 class="mb-5">BIENVENIDO</h1>
-        <h6>
-          Mi nombre es Luciano y en este portfolio, lo invito a conocer mis
-          habilidades y informacion sobre mi.
-        </h6>
+        <h1 class="mb-5">LUCIANO PAULUCCI</h1>
+        <h2 class="mb-5">BIENVENIDO</h2>
         <div class="dropdown">
           <button
             class="btn btn-secondary dropdown-toggle"
