--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -11,10 +11,10 @@
       <div class="card" aria-hidden="true">
         <div class="card-body">
           <h5>{{ proyecto.titulo }}</h5>
-          <p>{{ proyecto.informacion }}</p>
+          <p>Informacion: {{ proyecto.informacion }}</p>
           <p>Inicio: {{ proyecto.desde }}</p>
           <p>Fin: {{ proyecto.hasta }}</p>
-          <p>Url: {{proyecto.urlProyecto}}</p>
+          <p>Url: <a href="">{{proyecto.urlProyecto}}</a></p>
           <div *ngIf="modoEdit" class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-primary" routerLink="/Editar-proyecto/{{proyecto.id}}">
               <i class="fa-solid fa-pen"></i>
